deployment/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fundfit-prod
  labels:
    name: fundfit-prod
    environment: production
